# argilla-python

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: argilla-sdk.yml  ci.build.package.yml  docs.yml
0.1.0-alpha.0/: 404.html  index.html  sitemap.xml
0.1.0-alpha.0/how_to_guides/: index.html
0.1.0-alpha.0/integrations/: index.html
0.1.0-alpha.0/tutorials/: index.html
1.0.0-alpha.0/: 404.html  index.html  objects.inv  sitemap.xml
1.0.0-alpha.0/how_to_guides/: index.html
1.0.0-alpha.0/integrations/: index.html
1.0.0-alpha.0/tutorials/: index.html
ci_deploy-docs-version-per-pr/: 404.html  index.html  objects.inv  sitemap.xml
ci_deploy-docs-version-per-pr/how_to_guides/: index.html
ci_deploy-docs-version-per-pr/integrations/: index.html
ci_deploy-docs-version-per-pr/stylesheets/: extra.css
ci_deploy-docs-version-per-pr/tutorials/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/how_to_guides/: index.html
dev/integrations/: index.html
dev/search/: search_index.json
dev/tutorials/: index.html
docs/: CNAME  index.md
docs/community/: about.md  contributor.md  developer.md  faq.md  index.md
docs/getting_started/: installation.md  quickstart.md
docs/guides/: index.md
docs/how_to_guides/: dataset.md  fine_tune.md  index.md  query_export.md  record.md  user.md  workspace.md
docs_add-more-settings-usage/: 404.html  index.html  sitemap.xml
docs_alpha-release-docs/: 404.html  index.html  objects.inv  sitemap.xml
docs_collection-of-small-issues-related-to-docs/: 404.html  index.html  sitemap.xml
docs_document-workspace-resource/: 404.html  index.html  sitemap.xml
docs_fix-links/: 404.html  index.html  sitemap.xml
docs_review-david/: 404.html  index.html  sitemap.xml
docs_review-methods-docstrings/: 404.html  index.html  sitemap.xml
docs_support-metadata-update/: 404.html  index.html  sitemap.xml
docs_update-docs-to-suggestions/: 404.html  index.html  sitemap.xml
tests/: conftest.py  test_datasets.py  test_interface.py  test_questions.py  test_settings.py  test_users.py  test_workspaces.py
(+883 files in other folders)
