[project]
name = "argilla-sdk"
version = "0.1.0"
description = "The Argilla python server SDK"
authors = [
    {name = "Argilla", email = "contact@argilla.io"},
]
dependencies = [
    "httpx>=0.26.0",
]
requires-python = ">=3.8,<3.11"
readme = "README.md"
license = {text = "Apache 2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
package-type = "library"

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.12.3",
    "pytest>=7.4.4",
    "flake8>=5.0.4",
    "ruff>=0.1.12",
    "pytest-mock>=3.12.0",
    "black>=23.12.1",
    "build>=1.0.3",
]

[tool.pdm.scripts]
test = "pytest tests"
lint = "ruff check"
format = "black ."
all = {composite = ["format", "lint", "test", "build"]}


[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
