[project]
name = "argilla-sdk"
version = "0.1.0"
description = "The Argilla python server SDK"
authors = [
    {name = "Argilla", email = "contact@argilla.io"},
]
dependencies = [
    "httpx>=0.26.0",
    # TODO: Does make sense move this dependency to dev dependecies ?
    "mkdocs-gen-files>=0.5.0",
    "pydantic>=2.6.3",
]
requires-python = ">=3.8,<3.11"
readme = "README.md"
license = {text = "Apache 2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.12.3",
    "pytest>=7.4.4",
    "flake8>=5.0.4",
    "ruff>=0.1.12",
    "pytest-mock>=3.12.0",
    "pytest-httpx>=0.30.0",
    "black>=23.12.1",
    "build>=1.0.3",
    "pre-commit>=3.5.0",
    "mkdocs-material >= 9.5.0",
    "mkdocstrings[python] >= 0.24.0",
    "mkdocs-literate-nav >= 0.6.1",
    "mkdocs-section-index >= 0.3.8",
    "mkdocs-gen-files >= 0.5.0",
    "mike >= 2.0.0",
    "Pillow >= 9.5.0",
    "CairoSVG >= 2.7.1",
    "mknotebooks >= 0.8.0",
]

[tool.pdm.scripts]
test = "pytest tests"
lint = "ruff check"
format = "black ."
all = {composite = ["format", "lint", "test"]}


